--- a/style.css
+++ b/style.css
@@ -28,5 +28,5 @@ h4 {
   opacity: 0.2;
 }
 body {
-  background-image: url(./img/jouwen-wang-qJ9FwIQgLHI-unsplash.jpg);
+  background-image: url(./img/pexels-jplenio-1110656\ -\ Copy.jpg);
 }
